data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_960.wast
;; 1. **Test for Call Alignment with Incorrect Operand Stack:**    A test where a `call` instruction is executed followed by a `br` that mismanages the operand stack, resulting in incorrect alignment for the subsequent function call. Verify if the `br` instruction correctly aligns the operand stack for the function call.

(assert_invalid
  (module
    (func $test
      (call $dummy)
      (br 0)
      (call $dummy)
    )
    (func $dummy)
  )
  "stack misalignment from br instruction"
)